# fdf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
includes/: get_next_line.h  main.h
libft/: Makefile  ft_append_list.c  ft_atol_base.c  ft_destroy_lst.c  ft_i_atoi.c  ft_itoa.c  ft_lstnew.c  ft_putstr.c  libft.h
maps/: 42.fdf  mars2.fdf  mars_2_19.fdf  mars_2_20.fdf
sources/: color.c  draw.c  effects.c  get_next_line.c  interface.c  keys.c  main.c  parser.c  ram_man.c  ram_manager.c  rotate.c  service_func.c
src/: .main.c.swo  .px.h.swp  color.c  debug.c  draw.c  effects.c  experimental_code.c  for_lib.c  get_next_line.c  get_next_line.h  hooks.c  init.c  init2.c  interface.c  keys.c  main.c  main.h  parser.c  ram_man.c  rotate.c  service_func.c
